// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings Fields Component should disable fields correctly 1`] = `
<div>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        label="Select a Test Mode"
        name="test_mode"
        options={
          Array [
            Object {
              "helpText": "Once the test completes, the best performing template will be used in subsequent transmissions in place of the default.",
              "label": "Bayesian Mode",
              "value": "bayesian",
            },
            Object {
              "helpText": "Once the test completes, the default template will be used in subsequent transmissions.",
              "label": "Learning Mode",
              "value": "learning",
            },
          ]
        }
      />
    </Panel.Section>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        label="At what confidence level should we pick and start sending a winner?"
        name="confidence_level"
        step="0.01"
        type="number"
        validate={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        grid={
          Object {
            "xs": 6,
          }
        }
        label="How should we determine a winning variant?"
        name="metric"
        options={
          Array [
            Object {
              "label": "By Unique Click Rate",
              "value": "count_unique_clicked",
            },
            Object {
              "label": "By Unique Open Rate",
              "value": "count_unique_confirmed_opened",
            },
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText="By default, we continue to collect engagement events for 24 hours after the last delivery."
        label="How long would you like to continue to collect engagement events after the last delivery?"
        name="engagement_timeout"
        suffix="hours"
        type="number"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
    </Panel.Section>
  </Panel>
  <Panel>
    <Panel.Section>
      <Field
        bottomError={true}
        component={[Function]}
        disabled={true}
        grid={
          Object {
            "xs": 6,
          }
        }
        label="How should we distribute this test's variants?"
        name="audience_selection"
        options={
          Array [
            Object {
              "label": "By Percent",
              "value": "percent",
            },
            Object {
              "label": "By Number of Messages",
              "value": "sample_size",
            },
          ]
        }
        validate={[Function]}
      />
    </Panel.Section>
  </Panel>
</div>
`;

exports[`Settings Fields Component should render correctly 1`] = `
<div>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        label="Select a Test Mode"
        name="test_mode"
        options={
          Array [
            Object {
              "helpText": "Once the test completes, the best performing template will be used in subsequent transmissions in place of the default.",
              "label": "Bayesian Mode",
              "value": "bayesian",
            },
            Object {
              "helpText": "Once the test completes, the default template will be used in subsequent transmissions.",
              "label": "Learning Mode",
              "value": "learning",
            },
          ]
        }
      />
    </Panel.Section>
    <Panel.Section>
      <Field
        component={[Function]}
        label="At what confidence level should we pick and start sending a winner?"
        name="confidence_level"
        step="0.01"
        type="number"
        validate={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        grid={
          Object {
            "xs": 6,
          }
        }
        label="How should we determine a winning variant?"
        name="metric"
        options={
          Array [
            Object {
              "label": "By Unique Click Rate",
              "value": "count_unique_clicked",
            },
            Object {
              "label": "By Unique Open Rate",
              "value": "count_unique_confirmed_opened",
            },
          ]
        }
      />
      <Field
        component={[Function]}
        helpText="By default, we continue to collect engagement events for 24 hours after the last delivery."
        label="How long would you like to continue to collect engagement events after the last delivery?"
        name="engagement_timeout"
        suffix="hours"
        type="number"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
    </Panel.Section>
  </Panel>
  <Panel>
    <Panel.Section>
      <Field
        bottomError={true}
        component={[Function]}
        grid={
          Object {
            "xs": 6,
          }
        }
        label="How should we distribute this test's variants?"
        name="audience_selection"
        options={
          Array [
            Object {
              "label": "By Percent",
              "value": "percent",
            },
            Object {
              "label": "By Number of Messages",
              "value": "sample_size",
            },
          ]
        }
        validate={[Function]}
      />
    </Panel.Section>
  </Panel>
</div>
`;
